# kde2-kdeartwork

./: CMakeLists.txt  Makefile.am  README  configure.in.in
Themes/: CMakeLists.txt
Themes/Eclipse/: Eclipse.themerc
Themes/Eclipse/eclipse2/: index.desktop
Themes/Locolor/: Locolor.themerc
Themes/Locolor/locolor/: index.desktop
Themes/Technical/: Technical.themerc
Themes/Technical/technical1/: index.desktop
debian/: changelog  control  copyright  cvs.patch  kdeartwork-misc.files  kdeartwork-style.files  kdeartwork-style.override  kdeartwork-style.shlibs  kdeartwork-theme-desktop.files  kdeartwork-theme-window.files  rules
icewm-themes/MenschMaschine/: Makefile.am
icewm-themes/Model/: Makefile.am
sounds/: Makefile.am
styles/: CMakeLists.txt  Makefile.am
styles/b3plugin/: CMakeLists.txt  Makefile.am  b3.themerc
styles/ksgistyle/: CMakeLists.txt  Makefile.am  ksgistyle.themerc
styles/kstep-highcolor/: CMakeLists.txt  Makefile.am  kstep-highcolor.themerc  kstep.cpp
styles/pillbox/: CMakeLists.txt  Makefile.am  pillbox.themerc
styles/pillbox-highcolor/: CMakeLists.txt  Makefile.am  pillbox.cpp  pillboxhighcolor.themerc
